# clang-sys

./: CHANGELOG.md  Cargo.toml
clang-sys/: Cargo.toml  build.rs
clang-sys-linkage/: Cargo.toml  build.rs
clang-sys-linkage/src/: lib.rs
default/: search-index.js
default/clang_sys/: all.html  constant.CXAvailability_Deprecated.html  constant.CXAvailability_NotAvailable.html  constant.CXCallingConv_AAPCS_VFP.html  constant.CXCallingConv_Default.html  constant.CXCallingConv_IntelOclBicc.html  constant.CXCallingConv_Invalid.html  constant.CXCallingConv_PreserveAll.html  constant.CXCallingConv_PreserveMost.html  constant.CXCallingConv_Swift.html  constant.CXCallingConv_X86StdCall.html  constant.CXCallingConv_X86ThisCall.html  constant.CXCallingConv_X86VectorCall.html  constant.CXChildVisit_Continue.html  constant.CXCodeComplete_IncludeCodePatterns.html  constant.CXCodeComplete_IncludeMacros.html  constant.CXCommentInlineCommandRenderKind_Emphasized.html  constant.CXCommentParamPassDirection_Out.html  constant.CXComment_BlockCommand.html  constant.CXComment_FullComment.html  constant.CXComment_HTMLEndTag.html  constant.CXComment_Null.html  constant.CXComment_ParamCommand.html  constant.CXComment_Text.html  constant.CXComment_VerbatimBlockCommand.html  constant.CXComment_VerbatimLine.html  constant.CXCompilationDatabase_NoError.html  constant.CXCompletionChunk_CurrentParameter.html  constant.CXCompletionChunk_LeftAngle.html  constant.CXCompletionChunk_LeftParen.html  constant.CXCompletionChunk_ResultType.html  (+350 more)
runtime/: search-index.js
runtime/clang_sys/: all.html  (+446 more)
(+31 files in other folders)
